--- a/Source/Panama/View/EditControls/TitleEditPublished.xaml
+++ b/Source/Panama/View/EditControls/TitleEditPublished.xaml
@@ -17,8 +17,8 @@
         </DataGrid>
         <ToolBarTray>
             <ToolBar Style="{StaticResource ToolBarCommandHolder}">
-                <Button Command="{Binding RawCommands[PublishedAdd]}" Content="Add" ToolTip="Add a published entry"/>
-                <Button Command="{Binding RawCommands[PublishedRemove]}" Content="Remove" ToolTip="Remove the selected entry"/>
+                <Button Command="{Binding Commands[PublishedAdd]}" Content="Add" ToolTip="Add a published entry"/>
+                <Button Command="{Binding Commands[PublishedRemove]}" Content="Remove" ToolTip="Remove the selected entry"/>
             </ToolBar>
         </ToolBarTray>
         <StackPanel Margin="0,8" Visibility="{Binding Published.EditVisibility}">
