--- a/Source/Panama/View/EditControls/PublisherFilter.xaml
+++ b/Source/Panama/View/EditControls/PublisherFilter.xaml
@@ -57,7 +57,7 @@
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Style="{StaticResource StackPanelCommandHolder}">
-                        <Button Grid.Column="1" Content="Clear all" Command="{Binding RawCommands[ClearFilter]}"/>
+                        <Button Grid.Column="1" Content="Clear all" Command="{Binding Commands[ClearFilter]}"/>
                     </StackPanel>
                 </UniformGrid>
             </StackPanel>
