--- a/Source/Panama/View/SubmissionView.xaml
+++ b/Source/Panama/View/SubmissionView.xaml
@@ -24,7 +24,7 @@
         <!--<ItemsControl Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>-->
         <view:SimpleRowFilter />
 
-        <!-- Main data grid to display the tabular data              SortingCommand="{Binding RawCommands[GridSorting]}"-->
+        <!-- Main data grid to display the tabular data              SortingCommand="{Binding Commands[GridSorting]}"-->
         <con:DataGridExtended 
             x:Name="grid"
             Grid.Row="1" Grid.Column="0"
