--- a/Source/Panama/View/Windows/PublisherSelectWindow.xaml
+++ b/Source/Panama/View/Windows/PublisherSelectWindow.xaml
@@ -21,7 +21,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <view:SimpleRowFilter Grid.Row="0"/>
-        <Button Grid.Column="1" Grid.Row="0" Margin="5" Command="{Binding RawCommands[Select]}">Select</Button>
+        <Button Grid.Column="1" Grid.Row="0" Margin="5" Command="{Binding Commands[Select]}">Select</Button>
 
         <!-- Main data grid to display the tabular data  -->
         <con:DataGridExtended Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}"/>
